# AlphaZeroPlus

./: CMakeLists.txt  LICENSE  roadmap.md
alphazero/: main.py
game_library/: CMakeLists.txt  game.cpp  game.h  game_bindings.cpp  game_test.py  main.cpp
neural_network/: model.py
